--- a/projects/demo/src/app/suggestions/suggestions.component.html
+++ b/projects/demo/src/app/suggestions/suggestions.component.html
@@ -1,2 +1,2 @@
 <h1>Demo</h1>
-<ngx-dadata-ctrls-suggestions></ngx-dadata-ctrls-suggestions>
+<ngx-dadata-ctrls-suggestions [config]="configAddress" id="address"></ngx-dadata-ctrls-suggestions>
