--- a/projects/ngx-dadata-controls/src/lib/suggestions/suggestions.component.html
+++ b/projects/ngx-dadata-controls/src/lib/suggestions/suggestions.component.html
@@ -1,1 +1,19 @@
-<p>suggestions works!</p>
+<div class="autocomplete">
+  <input [disabled]="disabled  ? true : null" type="text" name="address" class="search" #inputValue
+    (input)="getData(inputValue.value)" [placeholder]="placeholder" (keyup.ArrowDown)="onArrowDown()"
+    (keyup.ArrowUp)="onArrowUp()" (keyup.Enter)="onEnter()" spellcheck="false" [(ngModel)]="value"
+    autocomplete="new-password" />
+  <div *ngIf="data.length">
+    <div class="autocomplete-items">
+      <div class="autocomplele-item" *ngFor="let item of data; let i = index" (click)="onClick($event, item)"
+        [id]="i+'item'">
+        {{item.value}}
+        <ng-template [ngIf]="type==='party'">
+          <br />
+          <span>{{item.data?.inn}}
+            {{config.partyAddress === 'full' ? item.data?.address?.value : item.data?.address?.data?.city}}</span>
+        </ng-template>
+      </div>
+    </div>
+  </div>
+</div>
